--- a/linear_programming.ipynb
+++ b/linear_programming.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Otimização Linear - Gabriel Haeser"
+    "### Linear Programming - Gabriel Haeser"
    ]
   },
   {
